# src/routes/swagger.json
@@ -24,6 +24,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401":{
+            "description": "Error: Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -32,6 +38,9 @@
         "responses": {
           "201": {
             "description": "Create a New Exercise"
+          },
+          "401":{
+            "description": "Error: Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -74,11 +83,36 @@
       }
     },
     "/exercises/{id}": {
+      "get":{
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401":{
+            "description": "Error: Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string"
+          }
+        ]
+      },
       "put": {
         "description": "",
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401":{
+            "description": "Error: Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -122,10 +156,37 @@
           "200": {
             "description": "OK"
           },
+          "401":{
+            "description": "Error: Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/exercises/category/{category}":{
+      "get":{
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401":{
+            "description": "Error: Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "parameters": [
+          {
+            "in": "path",
+            "name": "category",
+            "required": true,
+            "type": "string"
+          }
+        ]
       }
     }
   }
